<resources>
    <string name="China_Mobile">China Mobile</string>
    <string name="China_Mobile_HD">China Mobile (HD)</string>
    <string name="China_Telecom">China Telecom</string>
    <string name="China_Tietong">China Tietong</string>
    <string name="China_Unicom">China Unicom</string>
    <string name="Chunghwa_Telecom">Chunghwa Telecom</string>
    <string name="Far_EasTone">Far EasTone</string>
    <string name="GT_4G">GT 4G</string>
    <string name="TW_Mobile">TW Mobile</string>
    <string name="T_Star">T Star</string>
    <string name="abbrev_wday_month_day_no_year">EEEEMMMMd</string>
    <string name="abbrev_wday_month_day_no_year_alarm">EEEMMMd</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_error">"Couldn't connect"</string>
    <string name="abc_slice_more">More</string>
    <string name="abc_slice_more_content">+ %1$d</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slice_show_more">Show more</string>
    <string name="abc_slice_updated">Updated %1$s</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_accessibility_button">Accessibility</string>
    <string name="accessibility_action_divider_bottom_full">Bottom full screen</string>
    <string name="accessibility_action_divider_left_30">Left 30%</string>
    <string name="accessibility_action_divider_left_50">Left 50%</string>
    <string name="accessibility_action_divider_left_70">Left 70%</string>
    <string name="accessibility_action_divider_left_full">Left full screen</string>
    <string name="accessibility_action_divider_right_full">Right full screen</string>
    <string name="accessibility_action_divider_top_30">Top 30%</string>
    <string name="accessibility_action_divider_top_50">Top 50%</string>
    <string name="accessibility_action_divider_top_70">Top 70%</string>
    <string name="accessibility_action_divider_top_full">Top full screen</string>
    <string name="accessibility_airplane_mode">Airplane mode.</string>
    <string name="accessibility_ambient_display_charging">Charging</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_battery_details">Open battery details</string>
    <string name="accessibility_battery_full">Battery full.</string>
    <string name="accessibility_battery_level">Battery %d percent.</string>
    <string name="accessibility_battery_level_charging">Battery charging, %d percent.</string>
    <string name="accessibility_battery_one_bar">Battery one bar.</string>
    <string name="accessibility_battery_three_bars">Battery three bars.</string>
    <string name="accessibility_battery_two_bars">Battery two bars.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_bluetooth_name">Connected to %s.</string>
    <string name="accessibility_bluetooth_tether">Bluetooth tethering.</string>
    <string name="accessibility_brightness">Display brightness</string>
    <string name="accessibility_camera_button">Camera</string>
    <string name="accessibility_cast_name">Connected to %s.</string>
    <string name="accessibility_casting">@string/quick_settings_casting</string>
    <string name="accessibility_casting_turned_off">Screen casting stopped.</string>
    <string name="accessibility_cell_data">Mobile Data</string>
    <string name="accessibility_cell_data_on">Mobile Data On</string>
    <string name="accessibility_clear_all">Clear all notifications.</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_data_connection_wifi">Wi-Fi</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_saver_off">Data Saver is off</string>
    <string name="accessibility_data_saver_on">Data Saver is on</string>
    <string name="accessibility_data_signal_full">Data signal full.</string>
    <string name="accessibility_data_three_bars">Data three bars.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="accessibility_desc_close">Close</string>
    <string name="accessibility_desc_connected">Connected.</string>
    <string name="accessibility_desc_connecting">Connecting.</string>
    <string name="accessibility_desc_lock_screen">Lock screen.</string>
    <string name="accessibility_desc_notification_icon">%1$s notification: %2$s</string>
    <string name="accessibility_desc_notification_shade">Notification shade.</string>
    <string name="accessibility_desc_off">Off.</string>
    <string name="accessibility_desc_on">On.</string>
    <string name="accessibility_ime_switch_button">Switch input method</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_rotate_button">Rotate screen</string>
    <string name="app_name">Keyguard</string>
    <string name="battery">Battery</string>
    <string name="clear_all_notifications_text">Clear all</string>
    <string name="face_unlock_light_view_notify">The screen is lighting up to help face recognition.</string>
    <string name="headset">Headset</string>
    <string name="keyguard_widget_12_hours_format">h:mm</string>
    <string name="keyguard_widget_24_hours_format">kk:mm</string>
    <string name="left_icon">Left icon</string>
    <string name="left_keycode">Left keycode</string>
    <string name="left_nav_bar_button_type">Extra left button type</string>
    <string name="lockscreen_shortcut_left">Left shortcut</string>
    <string name="lockscreen_shortcut_right">Right shortcut</string>
    <string name="lockscreen_unlock_left">Left shortcut also unlocks</string>
    <string name="lockscreen_unlock_right">Right shortcut also unlocks</string>
    <string name="manage_notifications_text">Manage notifications</string>
    <string name="nav_bar">Navigation bar</string>
    <string name="nav_bar_layout">Layout</string>
    <string name="op_earphone_connect">Pairing...</string>
    <string name="op_earphone_title">OnePlus Bullets Wireless</string>
    <string name="other">Other</string>
    <string name="plugins">Plugins</string>
    <string name="prevent_view_title">Pocket mode is on</string>
    <string name="prevent_view_title_cancel">To activate your phone:</string>
    <string name="prevent_view_top_tag_cancel">Please do not cover the blue area of your phone, and clean any dirt or dust on the blue area.</string>
    <string name="prevent_view_top_tag_cancel2">Please follow the circles on the screen and tap on them to force quit pocket mode.</string>
    <string name="prevent_view_top_tag_numbuer1">"1. "</string>
    <string name="prevent_view_top_tag_numbuer2">"2. "</string>
    <string name="quick_settings_bluetooth_label">Bluetooth</string>
    <string name="quick_settings_cast_title">Cast</string>
    <string name="quick_settings_cellular_detail_title">Mobile data</string>
    <string name="quick_settings_dnd_label">Do not disturb</string>
    <string name="quick_settings_hotspot_label">Hotspot</string>
    <string name="quick_settings_wifi_label">Wi-Fi</string>
    <string name="right_icon">Right icon</string>
    <string name="right_keycode">Right keycode</string>
    <string name="right_nav_bar_button_type">Extra right button type</string>
    <string name="screen_pinning_description">This keeps it in view until you unpin. Touch &amp; hold Back and Overview to unpin.</string>
    <string name="screen_pinning_negative">No thanks</string>
    <string name="screen_pinning_positive">Got it</string>
    <string name="screen_pinning_title">Screen is pinned</string>
    <string name="status_bar">Status bar</string>
    <string name="status_bar_airplane">Airplane mode</string>
    <string name="status_bar_alarm">Alarm</string>
    <string name="status_bar_ethernet">Ethernet</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_work">Work profile</string>
    <string name="system_ui_tuner">System UI Tuner</string>
    <string name="tuner_doze">Ambient Display</string>
    <string name="tuner_doze_always_on">Always on</string>
    <string name="tuner_lock_screen">Lock screen</string>
    <string name="tuner_persistent_warning">These experimental features may change, break, or disappear in future releases. Proceed with caution.</string>
    <string name="tuner_time">Time</string>
    <string name="volume_and_do_not_disturb">Do not disturb</string>
    <string name="volume_dnd_silent">Volume buttons shortcut</string>
</resources>