<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/system_ui_tuner"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sysui="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen android:title="@string/status_bar" android:key="status_bar">
        <com.android.systemui.tuner.StatusBarSwitch android:title="@string/status_bar_settings_auto_rotation" android:key="rotate" />
        <com.android.systemui.tuner.StatusBarSwitch android:title="@string/headset" android:key="headset" />
        <com.android.systemui.tuner.StatusBarSwitch android:title="@string/status_bar_work" android:key="managed_profile" />
        <com.android.systemui.tuner.StatusBarSwitch android:title="@string/quick_settings_cast_title" android:key="cast" />
        <com.android.systemui.tuner.StatusBarSwitch android:title="@string/quick_settings_hotspot_label" android:key="hotspot" />
        <com.android.systemui.tuner.StatusBarSwitch android:title="@string/quick_settings_bluetooth_label" android:key="bluetooth" />
        <com.android.systemui.tuner.StatusBarSwitch android:title="@string/quick_settings_dnd_label" android:key="zen" />
        <com.android.systemui.tuner.StatusBarSwitch android:title="@android:string/volume_unknown" android:key="volume" />
        <com.android.systemui.tuner.StatusBarSwitch android:title="@string/quick_settings_wifi_label" android:key="wifi" />
        <com.android.systemui.tuner.StatusBarSwitch android:title="@string/status_bar_ethernet" android:key="ethernet" />
        <com.android.systemui.tuner.StatusBarSwitch android:title="@string/quick_settings_cellular_detail_title" android:key="mobile" />
        <com.android.systemui.tuner.StatusBarSwitch android:title="@string/status_bar_airplane" android:key="airplane" />
        <com.android.systemui.tuner.BatteryPreference android:entries="@array/battery_options" android:title="@string/battery" android:summary="%s" />
        <com.android.systemui.tuner.StatusBarSwitch android:title="@string/status_bar_alarm" android:key="alarm_clock" />
        <com.android.systemui.tuner.ClockPreference android:entries="@array/clock_options" android:title="@string/tuner_time" android:summary="%s" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/volume_and_do_not_disturb" android:key="volume_and_do_not_disturb">
        <com.android.systemui.tuner.TunerSwitch android:title="@string/volume_dnd_silent" android:key="sysui_volume_down_silent,sysui_volume_up_silent" sysui:defValue="true" sysui:metricsAction="315" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/tuner_doze" android:key="doze">
        <com.android.systemui.tuner.TunerSwitch android:title="@string/tuner_doze_always_on" android:key="doze_always_on" sysui:defValue="true" />
    </PreferenceScreen>
    <Preference android:title="@string/nav_bar" android:key="nav_bar" android:fragment="com.android.systemui.tuner.NavBarTuner" />
    <Preference android:title="@string/tuner_lock_screen" android:key="lockscreen" android:fragment="com.android.systemui.tuner.LockscreenFragment" />
    <Preference android:title="@string/plugins" android:key="plugins" android:fragment="com.android.systemui.tuner.PluginFragment" />
    <Preference android:selectable="false" android:summary="@string/tuner_persistent_warning" />
</PreferenceScreen>