<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_vertical" android:id="@id/screen_pinning_text_area" android:background="?android:colorAccent" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="24.0sp" android:textColor="@color/screen_pinning_primary_text" android:id="@id/screen_pinning_title" android:paddingTop="43.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/screen_pinning_title" android:paddingStart="48.0dip" android:paddingEnd="48.0dip" />
    <TextView android:textSize="16.0sp" android:textColor="@color/screen_pinning_primary_text" android:id="@id/screen_pinning_description" android:paddingTop="12.599976dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/screen_pinning_description" android:layout_below="@id/screen_pinning_title" android:paddingStart="48.0dip" android:paddingEnd="48.0dip" />
    <Button android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/screen_pinning_ok_button" android:background="@null" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_marginTop="18.0dip" android:text="@string/screen_pinning_positive" android:layout_below="@id/screen_pinning_description" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" android:layout_marginEnd="40.0dip" android:layout_alignParentEnd="true" style="@android:style/Widget.Material.Button" />
    <Button android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/screen_pinning_cancel_button" android:background="@null" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/screen_pinning_negative" android:layout_alignTop="@id/screen_pinning_ok_button" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" android:layout_marginEnd="4.0dip" android:layout_toStartOf="@id/screen_pinning_ok_button" style="@android:style/Widget.Material.Button" />
</RelativeLayout>