<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout" android:layout_width="fill_parent" android:layout_height="124.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/oneplus_contorl_layout_margin_left2" android:layout_marginTop="@dimen/oneplus_contorl_layout_margin_top2">
        <ImageView android:layout_gravity="center" android:layout_width="14.0dip" android:layout_height="14.0dip" android:src="@drawable/ic_bluetooth" android:alpha="@dimen/oneplus_contorl_icon_active_alpha" />
        <TextView android:textColor="#ff2196f3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/oneplus_contorl_layout_margin_left1" android:text="@string/app_name" style="@style/oneplus_contorl_text_style_subtitle" />
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/oneplus_contorl_layout_margin_left2" android:layout_marginTop="@dimen/oneplus_contorl_layout_margin_top1" android:text="@string/op_earphone_title" style="@style/oneplus_contorl_text_style_subheading" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/oneplus_contorl_layout_margin_left2" android:text="@string/op_earphone_connect" style="@style/oneplus_contorl_text_style_body1" />
    <ProgressBar android:id="@id/progress_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:indeterminate="true" android:indeterminateTint="#ff1985f1" android:backgroundTint="#ff1985f1" style="?android:progressBarStyleHorizontal" />
</LinearLayout>