<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.phone.OPFacelockLightView android:gravity="center_horizontal" android:id="@id/face_unlock_light_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/face_unlock_light_view_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/face_unlock_light_view_bg" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/face_unlock_light_inner_view" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.android.keyguard.clock.OPTextClock android:textAppearance="@style/widget_big_thin" android:textColor="@color/face_unlock_time_color" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/face_unlock_clock_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:shadowColor="@color/clock_shadow_color" android:shadowDy="1.0" android:shadowRadius="2.0" android:alpha="0.74" android:fontFamily="sans-serif-light" android:format12Hour="@string/keyguard_widget_12_hours_format" android:format24Hour="@string/keyguard_widget_24_hours_format" />
        <com.android.keyguard.clock.OPTextClock android:textAppearance="@style/widget_label" android:textColor="@color/face_unlock_time_color" android:gravity="center" android:id="@id/face_unlock_date_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:shadowColor="@color/clock_shadow_color" android:shadowDy="1.0" android:shadowRadius="2.0" android:alpha="0.74" android:fontFamily="sans-serif-medium" android:letterSpacing="0.15" />
        <TextView android:textSize="@dimen/face_unlock_notify_size" android:textColor="@color/face_unlock_notify_color" android:gravity="center_horizontal" android:id="@id/face_unlock_light_view_notify" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="38.0dip" android:text="@string/face_unlock_light_view_notify" />
    </LinearLayout>
    <Button android:textSize="@dimen/face_unlock_button_size" android:textColor="@android:color/white" android:id="@id/face_unlock_light_view_close_button" android:background="@drawable/face_unlock_rounded_background" android:paddingLeft="2.0dip" android:paddingRight="2.0dip" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_marginBottom="112.0dip" android:minWidth="63.0dip" android:text="@string/accessibility_desc_close" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <LinearLayout android:gravity="center" android:layout_width="56.0dip" android:layout_height="56.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <ImageView android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/fack_unlock_icon_dark" />
    </LinearLayout>
</com.android.systemui.statusbar.phone.OPFacelockLightView>